--- a/src/HotTub_beta_AIR.mxml
+++ b/src/HotTub_beta_AIR.mxml
@@ -2,7 +2,7 @@
 <!--
 BongTVLive.com Hot Tub 2.0 beta7 by b0nghitter
 -->
-<s:WindowedApplication xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:components="components.*"
@@ -108,4 +108,4 @@ BongTVLive.com Hot Tub 2.0 beta7 by b0nghitter
 	
 	
 	
-</s:WindowedApplication>
+</s:Application>
