--- a/src/components/popups/Reconnect_PopUpTitleWindow.mxml
+++ b/src/components/popups/Reconnect_PopUpTitleWindow.mxml
@@ -7,7 +7,8 @@
 			   windowMoving="titleWin_windowMovingHandler(event)"
 			   close="handleCloseEvent()" 
 			   backgroundColor="#249F18" 
-			   title="Live Stream">
+			   title="Connection Lost"
+			   width="400" height="200">
 	
 	
 	<fx:Declarations>
@@ -47,6 +48,8 @@
 			private var __iconManager:IconManager_Singleton;
 			private var __appWideSingleton:AppWide_Singleton;
 			private var __appWideEventDispatcher:AppWideEventDispatcher_Singleton;
+			private var __reconnectTimer:Timer;
+			private var __reconnectTimerCount:int = 5;
 			
 			
 			
@@ -66,13 +69,57 @@
 				
 				PopUpManager.centerPopUp(this);
 				
+				counter_L.text = "Reconnecting in: "+__reconnectTimerCount;
+				
+				// TODO start reconnect timer
+				__reconnectTimer = new Timer(1000, __reconnectTimerCount);
+				__reconnectTimer.addEventListener(TimerEvent.TIMER, reconnectTimer_tickHandler, false,0,true);
+				__reconnectTimer.addEventListener(TimerEvent.TIMER_COMPLETE, reconnectTimer_completeHandler, false,0,true);
+				__reconnectTimer.start();
+				
 				event = null;
 			}
 			
 			
-			private function okBtn_clickHandler(event:MouseEvent):void
+			private function reconnectTimer_tickHandler(event:TimerEvent):void
+			{
+				// set label text
+				__reconnectTimerCount--;
+				
+				if (__reconnectTimerCount>0)
+					counter_L.text = "Reconnecting in: "+__reconnectTimerCount;
+				else
+					counter_L.text = "Reconnecting...";
+				
+				event = null;
+			}
+			
+			
+			private function reconnectTimer_completeHandler(event:TimerEvent):void
 			{
 				event = null;
+				
+				__reconnectTimer.stop();
+				
+				__appWideSingleton.loggedOut = true;
+				
+				// reconnect
+				parentApplication.loginPanel.loginBtn.dispatchEvent(new MouseEvent(MouseEvent.CLICK, false,false));
+				
+				handleCloseEvent();
+			}
+			
+			
+			private function connectBtn_clickHandler(event:MouseEvent):void
+			{
+				event = null;
+				
+				__reconnectTimer.stop();
+				
+				__appWideSingleton.loggedOut = true;
+				
+				// TODO reconnect
+				parentApplication.loginPanel.loginBtn.dispatchEvent(new MouseEvent(MouseEvent.CLICK, false,false));
 				
 				handleCloseEvent();
 			}
@@ -81,6 +128,10 @@
 			private function cancelBtn_clickHandler(event:MouseEvent):void
 			{
 				event = null;
+				
+				__reconnectTimer.stop();
+				
+				__appWideSingleton.loggedOut = true;
 				
 				handleCloseEvent();
 			}
@@ -142,73 +193,26 @@
 	<s:Spacer height="10"/>
 	
 	
-	<s:HGroup horizontalAlign="center"
-			  verticalAlign="middle">
-		
-		
-		<!-- video settings -->
-		<s:VGroup width="300" height="200" 
-				  left="10" right="5" 
-				  horizontalAlign="center"
-				  verticalAlign="middle">
-			
-			<s:Label text="Video"/>
-			
-			<s:BorderContainer width="100%" height="100%" 
-							   backgroundAlpha="0" 
-							   borderColor="#000000" 
-							   cornerRadius="10">
-				
-				<s:layout>
-					<s:VerticalLayout horizontalAlign="center" 
-									  verticalAlign="middle"/>
-				</s:layout>
-				
-			</s:BorderContainer>
-			
-		</s:VGroup>
-		
-		
-		<!-- audio settings -->
-		<s:VGroup width="300" height="200" 
-				  left="10" right="5" 
-				  horizontalAlign="center"
-				  verticalAlign="middle">
-			
-			<s:Label text="Audio"/>
-			
-			<s:BorderContainer width="100%" height="100%" 
-							   backgroundAlpha="0" 
-							   borderColor="#000000" 
-							   cornerRadius="10">
-				
-				<s:layout>
-					<s:VerticalLayout horizontalAlign="center" 
-									  verticalAlign="middle"/>
-				</s:layout>
-				
-			</s:BorderContainer>
-			
-		</s:VGroup>
-		
-	</s:HGroup>
+	<s:Label id="counter_L" fontSize="16"/>
 	
 	
-	<s:Spacer height="20"/>
+	<s:Spacer height="10"/>
 	
 	
 	<s:HGroup width="100%" height="100%" 
 			  horizontalAlign="center"
 			  verticalAlign="middle">
 		
-		<s:Button id="okBtn" label="OK"
-				  click="okBtn_clickHandler(event)"/>
+		<s:Button width="100%" height="100%" 
+				  id="connectBtn" label="CONNECT" fontSize="16"
+				  click="connectBtn_clickHandler(event)"/>
 		
-		<s:Button id="cancelBtn" label="Cancel"
+		<s:Button width="100%" height="100%" 
+				  id="cancelBtn" label="CANCEL" opaqueBackground="#FF0000" color="#FF0000"
 				  click="cancelBtn_clickHandler(event)"/>
 		
-		
 	</s:HGroup>
+		
 	
 	
 	
